Se Creo un archivo de recursos que contiene los archivos de imagenes y se hizo limpieza de archivos

--- a/src/recursos.qrc
+++ b/src/recursos.qrc
@@ -1,14 +1,15 @@
 <RCC>
   <qresource>
-    <file alias="buscar20px">img/20px_find.jpg</file>
-    <file>img/20px-Crystal_Clear_app_kdict.png</file>
+    <file>img/30px_Crystal.png</file>
+    <file>img/20px_Crystal_Clear_app_kdict.png</file>
+    <file>img/20px_find.jpg</file>
     <file>img/25px_exit.png</file>
     <file>img/30px_1 (514).png</file>
-    <file>img/30px-Crystal_Clear_app_List_manager.png</file>
+    <file>img/30px_Crystal_Clear_app_List_manager.png</file>
     <file>img/40px_3floppy_unmount.png</file>
-    <file alias="buscar40px">img/40px_find.png</file>
+    <file>img/40px_Crystal_Clear_app_kedit.png</file>
+    <file>img/40px_find.png</file>
     <file>img/40px_reload.png</file>
-    <file>img/40px-Crystal_Clear_app_kedit.png</file>
     <file>img/agenda.ico</file>
     <file>img/apartment-2-16.png</file>
     <file>img/asiste_logo.png</file>
@@ -16,7 +17,6 @@
     <file>img/Asiste-512.png</file>
     <file>img/building-5-16.png</file>
     <file>img/building-5-24.png</file>
-    <file>img/captura.png</file>
     <file>img/check-mark-2-16.png</file>
     <file>img/check-mark-2-24.png</file>
     <file>img/erase.png</file>
